[workspace]
members = [
    "rate-latency-tool",
    "tools-common",
    "tpu-client-next-extensions",
    "transaction-bench",
]

resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/tpu-tools"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2024"

[workspace.lints.rust]
warnings = "deny"

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
# 1088d29ee4da0f04df71cb8f286667693412e43f is commit hash for Agave master as of 2026-01-26*, version 4.0
agave-logger = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
async-std = "1.12.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
bincode = "1.3.3"
chrono = { version = "0.4.42", default-features = false }
clap = { package = "clap", version = "4.5.41" }
crossbeam-channel = "0.5.15"
csv-async = "1.2"
futures = "0.3.31"
futures-util = "0.3.29"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
log = "0.4.27"
rand = "0.8.5"
serde = "1.0.228" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.149"
solana-clap-v3-utils = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-cli-config = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-clock = "3.0.1"
solana-commitment-config = "3.1.1"
solana-compute-budget-interface = "3.0.0"
solana-config-interface = "2.0.0"
solana-connection-cache = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-epoch-info = "3.1.0"
solana-epoch-schedule = "3.0.0"
solana-faucet = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-fee-calculator = "3.1.0"
solana-hash = "4.2.0"
solana-instruction = "3.2.0"
solana-keypair = "3.1.0"
solana-measure = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-message = "3.1.0"
solana-metrics = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-native-token = "3.0.0"
solana-net-utils = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-pubkey = { version = "4.0.0", default-features = false }
solana-pubsub-client = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-quic-definitions = "3.0.0"
solana-rent = "3.0.0"
solana-rpc = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-rpc-client = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-rpc-client-api = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-sdk-ids = "3.1.0"
solana-sha256-hasher = "3.1.0"
solana-signature = { version = "3.3.0" }
solana-signer = "3.0.0"
solana-streamer = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-system-interface = "3.0.0"
solana-test-validator = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-time-utils = "3.0.0"
solana-tpu-client = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-tpu-client-next = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
solana-transaction = "3.1.0"
solana-transaction-status = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
spl-memo-interface = "2.0.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
# the same as used by yellowstone-grpc-client
tonic = "0.14.2"
tools-common = { path = "tools-common" }
tpu-client-next-extensions = { path = "tpu-client-next-extensions" }
tracing = "0.1"
# Use updated version of yellowstone-grpc to match Solana version
yellowstone-grpc-client = { git = "https://github.com/KirillLykov/yellowstone-grpc.git", rev = "fed4" }
yellowstone-grpc-proto = { git = "https://github.com/KirillLykov/yellowstone-grpc.git", rev = "fed4" }

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

