[package]
name = "solana-rate-latency-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["leader_tracker"]
leader_tracker = ["futures-util", "solana-epoch-schedule", "solana-pubsub-client"]

[dependencies]
agave-logger = { workspace = true }
async-std = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
csv-async = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true, optional = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-epoch-schedule = { workspace = true, optional = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-measure = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-pubsub-client = { workspace = true, optional = true }
solana-quic-definitions = { workspace = true, optional = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-time-utils = { workspace = true }
solana-tpu-client = { workspace = true }
solana-tpu-client-next = { workspace = true, features = ["metrics", "agave-unstable-api", "websocket-node-address-service"] }
solana-transaction = { workspace = true }
spl-memo-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tools-common = { workspace = true }
tpu-client-next-extensions = { workspace = true }
wincode = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
solana-epoch-info = { workspace = true }
solana-faucet = { workspace = true, features = ["dev-context-only-utils"] }
solana-fee-calculator = { workspace = true }
solana-native-token = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rent = { workspace = true }
solana-rpc = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-streamer = { workspace = true, features = ["dev-context-only-utils"] }
solana-test-validator = { workspace = true }
solana-transaction-3 = { workspace = true }

[lints]
workspace = true
